HelloUltraviolet/Fixtures/RejectedSource/FFI/RawExportUnsupportedABI/Expected.uv
//! Expected diagnostic metadata for the RawExportUnsupportedABI rejected-source specimen.

expectedDiagnostic("E-SYS-3352", "diagnostics.23.RawExportDiagnosticOwnership")
